pages/items/itemPage.module.scss
@use '../../styles/spacing.module.scss' as spacing;
@use '../../styles/typography.module.scss' as typography;
@use '../../styles/breakpoints.module.scss' as breakpoints;

.item {
  column-gap: spacing.$large-space;
  display: grid;
  grid-template-columns: calc(70% - spacing.$small-space) auto;
  padding: spacing.$small-space;
  row-gap: 5rem;
}

.item-picture {
  width: 100%;
  max-width: 45rem;
}

.item-description {
  font-weight: typography.$font-weight-normal;

  h2 {
    color: #363636;
    font-size: typography.$text-large-2xl;
  }

  p {
    color: #989898;
    font-size: typography.$text-large;
  }
}

@media (max-width: breakpoints.$small-mobile-breakpoint) {
  .item {
    grid-template-columns: auto;
    row-gap: 2rem;
  }
}

